--- a/src/styles/productsSlider.scss
+++ b/src/styles/productsSlider.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
   }
 
   &__title {
@@ -86,6 +87,8 @@
   &__item-image {
     height: 208px;
     padding-bottom: 24px;
+    padding-left: 10px;
+    text-align: center;
   }
 
   &__item-title {
